# NextJS-WASM-and-WebWorkers

./: .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.options.json
.cargo/: nextest.toml
.github/workflows/: ci.yml
.moon/: node.yml  toolchain.yml  workspace.yml
.moon/tasks/: node-library.yml  tag-node-library.yml  tag-node.yml  tag-rust-base.yml  tag-rust-wasm.yml  tag-rust.yml
apps/sample-nextjs/: .eslintrc.js  moon.yml  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
apps/sample-nextjs/app/: globals.css  layout.tsx  page.module.css  page.tsx
apps/sample-nextjs/app/api/: route.ts
apps/sample-nextjs/app/api/js/: route.ts
apps/sample-nextjs/app/draw/: page.module.css  page.tsx
apps/sample-nextjs/src/components/: providers.tsx
apps/sample-nextjs/src/components/Button/: index.module.css  index.tsx
apps/sample-nextjs/src/components/ComparisonCard/: index.module.css  index.tsx
apps/sample-nextjs/src/components/DrawingApp/: index.tsx
apps/sample-nextjs/src/components/DrawingApp/Toolbar/: index.module.css  index.tsx
apps/sample-nextjs/src/components/GameOfLife/: index.tsx
apps/sample-nextjs/src/components/Navigation/: index.module.css  index.tsx
apps/sample-nextjs/src/components/NumberInput/: index.module.css  index.tsx
apps/sample-nextjs/src/components/OptionGrid/: index.module.css  index.tsx
apps/sample-nextjs/src/components/RunnableComparisonCard/: index.tsx
apps/sample-nextjs/src/components/Sample/: index.module.css  index.tsx
apps/sample-nextjs/src/components/WebWorker/: index.tsx
apps/sample-nextjs/src/hooks/use-comparisons/: index.tsx
apps/sample-nextjs/src/hooks/use-drawing-app/: index.tsx
apps/sample-nextjs/src/state/: atoms.ts
apps/sample-nextjs/src/tests/: get-fib.test.ts  get-url.test.ts
apps/sample-nextjs/src/utils/: format-number.ts  get-fib.ts  get-url.ts  time-func.ts
crates/sample-wasm/: Cargo.toml  moon.yml
crates/sample-wasm/src/: lib.rs
crates/sample-wasm/tests/: fib.rs  game_of_life.rs  web.rs
crates/test-web/: Cargo.toml  Trunk.toml  index.html  moon.yml
crates/test-web/src/: lib.rs  main.rs
crates/utilities/: Cargo.toml
crates/utilities/src/: lib.rs  web.rs
crates/utilities/tests/: lib.rs
crates/wasm-draw/: Cargo.toml  moon.yml
crates/wasm-draw/src/: app.rs  canvas.rs  draw_engine.rs  lib.rs  main.rs  settings.rs  state.rs  tool.rs  toolbar.rs
templates/js-lib/: moon.yml  package.json.tera  template.yml  tsconfig.json.tera  tsup.config.ts
templates/js-lib/tests/: index.test.ts
templates/rust-package/: Cargo.toml.tera  moon.yml.tera  template.yml
