[package]
name = "sample-wasm"
version = "0.1.0"
authors = ["Alex Wine <alexwine36@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = {workspace = true}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = {workspace = true}
utilities = { path = "../utilities" }

[dev-dependencies]
wasm-bindgen-test = {workspace = true}

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
