[package]
name = "wasm-draw"
version = "0.1.0"
authors = ["Alex Wine <alexwine36@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
utilities = { path = "../utilities" }
console_error_panic_hook = { version = "0.1.7" }
js-sys = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"


[dev-dependencies]
wasm-bindgen-test = { workspace = true }
rand = "0.8.5"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
    'console',
    'CssStyleDeclaration',
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'HtmlElement',
    'HtmlImageElement',
    'MouseEvent',
    'EventListener',
    'Node',
    'Window',
    'DomRect',
    'Element',
    'ImageData',
]
